unpackaged/main/default/objects/GBS_Sharing_Exception__mdt/GBS_Sharing_Exception__mdt.object-meta.xml
<CustomObject>
    <description>Criteria-driven Sharing exceptions for GBS Case Sharing / Visibility.</description>
    <label>GBS Sharing Exception</label>
    <pluralLabel>GBS Sharing Exceptions</pluralLabel>
</CustomObject>