unpackaged/main/default/objects/GBS_Sharing_Exception__mdt/fields/Countries__c.field-meta.xml
<CustomField>
    <fullName>Countries__c</fullName>
    <description>List of countries for which this exception applies, separated by commas.</description>
    <label>Countries</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>