unpackaged/main/default/objects/GBS_Sharing_Exception__mdt/fields/GBS_Center__c.field-meta.xml
<CustomField>
    <fullName>GBS_Center__c</fullName>
    <description>GBS Center of the Case.</description>
    <label>GBS Center</label>
    <length>40</length>
    <type>Text</type>
</CustomField>