unpackaged/main/default/objects/GBS_Sharing_Exception__mdt/fields/GBS_Group__c.field-meta.xml
<CustomField>
    <fullName>GBS_Group__c</fullName>
    <description>Name (label) of the GBS group with which the Case will be shared.</description>
    <label>GBS Group</label>
    <length>80</length>
    <type>Text</type>
</CustomField>