unpackaged/main/default/objects/GBS_Sharing_Exception__mdt/fields/GBS_Team__c.field-meta.xml
<CustomField>
    <fullName>GBS_Team__c</fullName>
    <description>Team/type of the Case.</description>
    <label>GBS Team</label>
    <length>80</length>
    <type>Text</type>
</CustomField>